diff-utils/src/snapshots/diff_utils__tests__diff_hunks__test___test_1.snap
---
source: diff-utils/src/lib.rs
expression: hunks

---
... ...   @@ -1,2 +1,2 @@
001      -A B C
002      -D E F
    001  +A B D
    002  +E F G


