diff-utils/src/snapshots/diff_utils__tests__diff_hunks__test___test_3.snap
---
source: diff-utils/src/lib.rs
expression: hunks

---
... ...   @@ -1,2 +1,2 @@
001      -|-------|-------------|-----------------------------------------|-----|---------------------------------|-----------|
002      -| 24638 | Twin Room   | P1:3 A1:3 C0:2 FC0:9[0:1] MCA0:3[13:13] | DZ  | child_ages:["2:3","4:6","7:12"] |           |
    001  +|-------|-------------|-----------------------------------------|-----|---------------------------|-----------|
    002  +| 24638 | Twin Room   | P1:3 A1:3 C0:2 FC0:9[0:3] MCA0:3[13:13] | DZ  | child_ages:["4:6","7:12"] |           |


